--- a/app/views/cosmetics-general/tasks/help/inc_products-task5.html
+++ b/app/views/cosmetics-general/tasks/help/inc_products-task5.html
@@ -1,12 +1,7 @@
-        <div class="govuk-!-margin-top-7 govuk-!-margin-bottom-4">
-            {% include "cosmetics-general/tasks/help/inc_title.html" %}
+<div class="govuk-!-margin-top-7 govuk-!-margin-bottom-4">
+    {% include "cosmetics-general/tasks/help/inc_title.html" %}
 
-            <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">xxxxxxxxxxxxx or more questions about the xxxxxxxxxxxxx will include:</p>
-
-            <!--ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
-                <li>Have you submitted a notification about it in <abbr title="Great Britain">GB</abbr> since 1 January 2021?</li>
-                <li>Is it listed in <abbr title="European Commision">EC</abbr> regulation 1223/2009, Annex 6 and does it conform to the restrictions of Annex 6?</li>
-            </ul>
-
-            <p class="govuk-body govuk-!-font-size-16">You can also add or remove individual nanomaterials.</p-->
-        </div>
+    <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">You can review the draft and make changes to the draft notification by completing each task as often as required. You must complete each task before you can accept the draft and submit it.
+    </p>
+    <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">You will have 7 days from the date you submit the notification to delete it. You should only do this if your notification contains wrong information.</p>
+</div>
