--- a/app/views/cosmetics-clone/confirmation-3.html
+++ b/app/views/cosmetics-clone/confirmation-3.html
@@ -20,7 +20,7 @@
                 <h3 class="govuk-notification-banner__heading">
                     You have created the draft notification
                 </h3>
-                <p class="govuk-body">You can now edit the draft notification details.</p>
+                <!--p class="govuk-body">You can now edit the draft notification details.</p-->
             </div>
         </div>
 
@@ -29,11 +29,11 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p class="govuk-body govuk-!-margin-bottom-4">The new draft product notification has been created using one of your own product notifications as a template. It is now in the drafts section of your <a href="#" class="govuk-link govuk-link--no-visited-state">cosmetic products page</a>; from where you can continue to edit it before you accept and submit it.</p>
+      <p class="govuk-body govuk-!-margin-bottom-4">The new draft product notification has been created using one of your own product notifications as a template. It is now in the drafts section of your <a href="#" class="govuk-link govuk-link--no-visited-state">cosmetic products page</a>.</p>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-      <p class="govuk-body-l">Open the new draft notification to <a href="[open the draft in the task list page]" class="govuk-link govuk-link--no-visited-state">edit it</a>.</p>
+      <p class="govuk-body-l">Edit the new draft notification using the <a href="task-page-4.html" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
     </div>
   </div>
 
