search on submit work

--- a/app/views/opss-nav.html
+++ b/app/views/opss-nav.html
@@ -6,17 +6,17 @@
 
   <nav class="govuk-width-container" aria-label="Main">
     <ul class="opss-top-nav">
-      <li>
-        <a class="govuk-link govuk-link--no-visited-state" href="cosmetic-products-alt-01">Cosmetic products</a>
-      </li>
       <li class="opss-top-nav__item--active">
-        <a aria-current="page" class="govuk-link govuk-link--no-visited-state" href="nanomaterials">Nanomaterials</a>
+        <a class="govuk-link govuk-link--no-visited-state" href="left-nav-cosmetic-products">Cosmetic products</a>
       </li>
       <li>
-        <a class="govuk-link govuk-link--no-visited-state" href="responsible-person">Responsible person</a>
+        <a aria-current="page" class="govuk-link govuk-link--no-visited-state" href="#">Nanomaterials</a>
       </li>
       <li>
-        <a class="govuk-link--no-visited-state" href="team-members">Team members</a>
+        <a class="govuk-link govuk-link--no-visited-state" href="#">Responsible person</a>
+      </li>
+      <li>
+        <a class="govuk-link--no-visited-state" href="#">Team members</a>
       </li>
     </ul>
   </nav>
