--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -332,6 +332,9 @@ samp {
 }
 
 @include govuk-media-query($from: desktop) {
+    .opss-desktop-min-height--xs {
+        min-height: 130px; 
+    }    
     .opss-desktop-min-height--s {
         min-height: 180px; 
     }
@@ -889,10 +892,11 @@ dd dl.opss-nested-definition-list {
         border: 1px solid $govuk-border-colour;
         padding: 0 govuk-spacing(4) govuk-spacing(2) govuk-spacing(4);
         margin: govuk-spacing(5) 0 0 0;
-
+        /* not all style options to match GDS styles are added - you may need to add more when required: e.g, opss-grouping__legend--l */
         .opss-grouping__heading-l,
         .opss-grouping__heading-m,
-        .opss-grouping__heading-s {
+        .opss-grouping__heading-s, 
+        .opss-grouping__legend--s {
             background-color: govuk-colour("white");
             display: inline-block;
             margin: 0;
@@ -907,6 +911,9 @@ dd dl.opss-nested-definition-list {
         .opss-grouping__heading-s {
             top: - govuk-spacing(2) - 3;
         }
+        .opss-grouping__legend--s {
+            top: govuk-spacing(0);
+        }        
         .opss-grouping__heading--norm {
             font-weight: normal;
         }
