--- a/app/views/cosmetics-general/ingredients-cosmetic-products-search.html
+++ b/app/views/cosmetics-general/ingredients-cosmetic-products-search.html
@@ -338,7 +338,7 @@
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">&nbsp;</th>
                             <th id="uknotified" scope="col" class="govuk-table__header"><abbr>UK</abbr> notified</th>
-                            <th id="ukcosprodnumber" scope="col" class="govuk-table__header"><abbr>UK</abbr> cosmetic product number</th>
+                            <th id="ukcosprodnumber" scope="col" class="govuk-table__header"><abbr>UKCP</abbr>  number</th>
                             <th id="eurefnumber" scope="col" class="govuk-table__header"><abbr>EU</abbr> reference number</th>
                         </tr>
                         </thead>
@@ -883,7 +883,7 @@
                             <tr class="govuk-table__row">
                                 <th class="govuk-visually-hidden">&nbsp;</th>
                                 <th scope="col" class="govuk-table__header"><abbr>UK</abbr> notified</th>
-                                <th scope="col" class="govuk-table__header"><abbr>UK</abbr> cosmetic product number</th>
+                                <th scope="col" class="govuk-table__header"><abbr>UKCP</abbr> number</th>
                                 <th scope="col" class="govuk-table__header"><abbr>EU</abbr> reference number</th>
                             </tr>
                         </tfoot>
