--- a/app/views/cosmetics-general/ingredients-ingredients-search-any.html
+++ b/app/views/cosmetics-general/ingredients-ingredients-search-any.html
@@ -362,7 +362,7 @@
                     <tr class="govuk-table__row">
                         <th class="govuk-visually-hidden">&nbsp;</th>
                         <th id="uknotified" scope="col" class="govuk-table__header"><abbr>UK</abbr> notified</th>
-                        <th id="ukcosprodnumber" scope="col" class="govuk-table__header"><abbr>UK</abbr> cosmetic product number</th>
+                        <th id="ukcosprodnumber" scope="col" class="govuk-table__header"><abbr>UKCP</abbr>  number</th>
                         <th id="resperson" scope="col" class="govuk-table__header">Responsible Person</th>
                     </tr>
                     </thead>
