--- a/app/views/cosmetics-general/ingredients-ingredients-search.html
+++ b/app/views/cosmetics-general/ingredients-ingredients-search.html
@@ -367,7 +367,7 @@
                     <tr class="govuk-table__row">
                         <th class="govuk-visually-hidden">&nbsp;</th>
                         <th id="uknotified" scope="col" class="govuk-table__header"><abbr>UK</abbr> notified</th>
-                        <th id="ukcosprodnumber" scope="col" class="govuk-table__header"><abbr>UK</abbr> cosmetic product number</th>
+                        <th id="ukcosprodnumber" scope="col" class="govuk-table__header"><abbr>UKCP</abbr>  number</th>
                         <th id="resperson" scope="col" class="govuk-table__header">Responsible Person</th>
                     </tr>
                     </thead>
@@ -1103,7 +1103,7 @@
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">&nbsp;</th>
                             <th scope="col" class="govuk-table__header"><abbr>UK</abbr> notified</th>
-                            <th scope="col" class="govuk-table__header"><abbr>UK</abbr> cosmetic product number</th>
+                            <th scope="col" class="govuk-table__header"><abbr>UKCP</abbr> number</th>
                             <th scope="col" class="govuk-table__header">Responsible Person</th>
                         </tr>
                     </tfoot>
