--- a/app/views/cosmetics-submit-search/index.html
+++ b/app/views/cosmetics-submit-search/index.html
@@ -82,7 +82,7 @@
                 <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-submit-search/left-nav-cosmetic-products.html" target="_blank">New left nav</a>
                 <br><span class="govuk-!-font-size-16">To allow for additional search page - and future search pages - this now also affords the opportunity to split out the the draft notifications into their own page (and eventually, archived notifications). The parent 'Cosmetic products' nav link stays active for all left nav links.
                     
-                <br><br>(Left nav has active class and aria attribute. DOM is now 'main' > 'div.govuk-grid-row' > 'nav' & 'section'. Header and hint text updated. New '.opss-desktop-min-height--s' added to headers. Moved hint text with updated classes. Remove H2. Remove "of your notified products" text from notified products download link. Remove the two margin classes from the download link).</span>.
+                <br><br>(Left nav has active class and aria attribute. DOM is now 'main' > 'div.govuk-grid-row' > 'nav' & 'section'. Header and hint text updated. New '.opss-desktop-min-height--s' added to headers. Moved hint text with updated classes. Remove H2. Remove "of your notified products" text from notified products download link. Remove the two margin classes from the download link). Remove '<code>&lt;span class="govuk-visually-hidden"&gt;cosmetic product&lt;/span&gt;</code>' from table header and footer</span>.
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
@@ -93,28 +93,33 @@
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-submit-search/left-nav-cosmetic-products-drafts.html" target="_blank">Drafts page</a>
-                <br><span class="govuk-!-font-size-16">Maintain the same functionality - or lack of it - and simply split out the drafts information into its own page. (Any embellishments for the drafts page is a seperate piece of work).               
+                <br><span class="govuk-!-font-size-16">Maintain the same functionality - or lack of it - and simply split out the drafts information into its own page. (Any embellishments for the drafts page is a seperate piece of work). Remove '<code>&lt;span class="govuk-visually-hidden"&gt;cosmetic product&lt;/span&gt;</code>' from table header and footer.               
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-submit-search/left-nav-cosmetic-products-search.html" target="_blank">Product - search</a>
-                <br><span class="govuk-!-font-size-16">Search form. (Update "aria-label" on the section tag). The main search box returns fuzzy matches on the product name, but if a UKCP number is entered we should search for "UKCP-61869641" or "61869641". There is no error message required on the search input (as a it can be blank). Both the blue button and the 'search' button submit the form.
+                <br><span class="govuk-!-font-size-16">Search form. The main search box returns fuzzy matches on the product name, but if a UKCP number is entered we should search for "UKCP-61869641" or "61869641". There is no error message required on the Search input (as a value is not required and it can be blank). Both the blue button and the 'Search' button submit the form. (Update "aria-label" on the section tag). 
                 <br><br>
                 The filtering on notified or archived notifications is shown for illustrative purposes - once archiving is introduced we should include this filter.
                 <br><br>
-                The reset link is a standard reset (resetting the form); there is no need for hidden inputs (which won't need resetting).
+                The reset link is a standard <abbr>HTML</abbr> reset (resetting the form). No hidden inputs will need resetting. The submitted search settings can be stored in hidden inputs in the results list page and then used to submit back to the search form page again, in order to maintain the form state if the user chooses to 'Edit the search' (so that the form will reload as the user last submitted it). The reset button also uses script to reset any "value" attributes, which will be set if the user chooses to 'Edit the search' (and will remove error messages, returning the form back to its default state). (Add the JavaScript directly to this page - not a global file - and ensure that 'opss-radios__input-default' classes are added to the default radio options. That's all you need to do).
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
                         <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-submit-search/left-nav-cosmetic-products-errors.html" target="_blank">Product - search - errors</a> 
-                        <br><span class="govuk-!-font-size-16">Example of date form errors. I recommend only using these two date error messages: 
-                            <br>1. Enter a value for all date fields or none.    <i>....(if one date field has a date, they all need a value)</i>
-                            <br>2. Enter only valid dates.</span>.       <i>....(numbers which are not valid dates and non-numeric values)</i>
+                        <br>For the dates there are 2 fieldsets directly nested within 1 parent fieldset: A minor style change for these error message styles adds the 'aria-describedby' values to the parent fieldset and injects the error messages into the parent fieldset (and not the nested fieldsets). The date values have been hardcoded into this demo page form for illustration purposes. 
+                        <br><br>
+                        <span class="govuk-!-font-size-16">Example of date form errors. I recommend only using these 3 date error messages: 
+                            <br>1. Enter a valid date     <i>(this also covers non-numeric entries and avoids having to name individual fields)</i>
+                            <br>2. Enter a value for all date fields</span>       <i>(Dates fiels are only required if one or more fields have a value: if any 1 of the 6 date fields has a value then all date fields require a value. If all date fields are empty then they do not require a value. This also avoids having to name individual fields. It also allows for only one message for several offences - a single error message ID should target the first empty date field)</i>
+                            <br>3. The From date must be before the To date</span>       <i>(if the To date preceeds the From date)</i>
                     </li>
                 </ul>
             </li> 
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-submit-search/left-nav-cosmetic-products-search-results.html" target="_blank">Product - search - results</a>
-                <br><span class="govuk-!-font-size-16">Clicking 'Search again' returns the user back to the search page (and the search page form is blank).               
+                <br><br>
+                Max 30 results per page - pagination only added if more than one page. Table footers only added if there are 12 or more results. Bascially, continue with current fuctionality/behaviour. Remove '<code>&lt;span class="govuk-visually-hidden"&gt;cosmetic product&lt;/span&gt;</code>' from table header and footer.
+                <br><br><span class="govuk-!-font-size-16">Clicking 'Search again' returns the user back to the search page - simply as a hyperlink - so that the form page loads with its default settings. If the user chooses to 'Edit the search' the user is returned to the form page which shows all the input values they last used/submitted. 
             </li>                       
 
 
@@ -126,7 +131,7 @@
         
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">       
 
-        <p class="govuk-body-l">Get latest _opss-shared.scss and add _opss-search.scss to your sass build.</p>
+        <p class="govuk-body-l">Developer: Get latest '_opss-shared.scss' and add '_opss-search.scss' to your sass build.</p>
 
 
     </div>
