--- a/app/views/cosmetics-submit-search/left-nav-cosmetic-products-drafts.html
+++ b/app/views/cosmetics-submit-search/left-nav-cosmetic-products-drafts.html
@@ -88,7 +88,7 @@
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header">Product</th>
           <th scope="col" class="govuk-table__header">Created</th>
-          <th scope="col" class="govuk-table__header"><abbr>UKCP</abbr> <span class="govuk-visually-hidden">cosmetic product </span>number</th>
+          <th scope="col" class="govuk-table__header"><abbr>UKCP</abbr> number</th>
           <th scope="col" class="govuk-table__header"><span class="govuk-visually-hidden">Continue</span></th>
         </tr>
       </thead>
