--- a/app/views/cosmetics-submit-search/left-nav-cosmetic-products.html
+++ b/app/views/cosmetics-submit-search/left-nav-cosmetic-products.html
@@ -89,7 +89,7 @@
 
         <th scope="col" class="govuk-table__header"><abbr>UK</abbr> notified</th>
 
-        <th scope="col" class="govuk-table__header"><abbr>UK</abbr> <span class="govuk-visually-hidden">cosmetic product </span>number</th>
+        <th scope="col" class="govuk-table__header"><abbr>UKCP</abbr> number</th>
 
         <th scope="col" class="govuk-table__header"><span class="govuk-visually-hidden">View</span></th>
 
@@ -255,7 +255,30 @@
             <td class="govuk-table__cell">UKCP-445399100</td>
             <td class="govuk-table__cell"><a href="#" class="govuk-link govuk-link--no-visited-state">View<span class="govuk-visually-hidden"> the Xero Tan removal</span></a></td>
           </tr>
-
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">Xero Tan removal</th>
+            <td class="govuk-table__cell">3 October 2019</td>
+            <td class="govuk-table__cell">UKCP-445399100</td>
+            <td class="govuk-table__cell"><a href="#" class="govuk-link govuk-link--no-visited-state">View<span class="govuk-visually-hidden"> the Xero Tan removal</span></a></td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">Asda Summer tan lotion</th>
+            <td class="govuk-table__cell">28 July 2020</td>
+            <td class="govuk-table__cell">UKCP-337475933</td>
+            <td class="govuk-table__cell"><a href="#" class="govuk-link govuk-link--no-visited-state">View<span class="govuk-visually-hidden"> the Asda Summer tan lotion notification</span></a></td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">Segda fresh shampoo</th>
+            <td class="govuk-table__cell">12 Feburary 2019</td>
+            <td class="govuk-table__cell">UKCP-229978799</td>
+            <td class="govuk-table__cell"><a href="#" class="govuk-link govuk-link--no-visited-state">View<span class="govuk-visually-hidden"> the Segda fresh shampoo notification</span></a></td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">Xero Tan removal</th>
+            <td class="govuk-table__cell">3 October 2019</td>
+            <td class="govuk-table__cell">UKCP-445399100</td>
+            <td class="govuk-table__cell"><a href="#" class="govuk-link govuk-link--no-visited-state">View<span class="govuk-visually-hidden"> the Xero Tan removal</span></a></td>
+          </tr>
 
     </tbody>
 
@@ -263,7 +286,7 @@
         <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Product</th>
             <th scope="col" class="govuk-table__header"><abbr>UK</abbr> notified</th>
-            <th scope="col" class="govuk-table__header"><abbr>UK</abbr> number</th>
+            <th scope="col" class="govuk-table__header"><abbr>UKCP</abbr> number</th>
             <th scope="col" class="govuk-table__header"><span class="govuk-visually-hidden">View</span></th>
         </tr>
     </tfoot>
